# raindrop-mcp-server-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/mcp/: mod.rs  server.rs
src/raindrop/: client.rs  mod.rs  types.rs
