[package]
name = "mcp-raidrop"
version = "0.1.0"
edition = "2024"

[dependencies]
# MCP Protocol SDK
rmcp = { version = "0.2.1", features = ["server", "transport-io"] }
rmcp-macros = "0.2.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# HTTP client for Raindrop API
reqwest = { version = "0.11", features = ["json"] }

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# URL parsing
url = "2"
urlencoding = "2"

[dev-dependencies]
# Testing utilities
mockito = "1.5"
tokio-test = "0.4"
wiremock = "0.6"
rstest = "0.23"
pretty_assertions = "1"
chrono = { version = "0.4", features = ["serde"] }
