[package]
name = "raindrop-mcp-server-rs"
version         = "0.1.0"
edition         = "2024"
rust-version    = "1.85"
authors         = ["Yamahigashi <yamahigashi@gmail.com>"]
description = "A Rust implementation of the Raindrop MCP server, providing a protocol for managing and interacting with Raindrop bookmarks."
license         = "MIT"
repository      = "https://github.com/yamahigashi/raindrop-mcp-server-rs"
homepage        = "https://github.com/yamahigashi/raindrop-mcp-server-rs"
readme          = "README.md"
keywords        = ["raindrop-io", "mcp", "llm"]
categories      = [
  "api-bindings", "asynchronous", "web-programming", "command-line-utilities"
]
include         = ["src/**", "README.md", "LICENSE-*", "Cargo.toml"]


[dependencies]
# MCP Protocol SDK
rmcp = { version = "0.2.1", features = ["server", "transport-io"] }
rmcp-macros = "0.2.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# HTTP client for Raindrop API
reqwest = { version = "0.12", features = ["json"] }

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# URL parsing
url = "2"
urlencoding = "2"

[dev-dependencies]
# Testing utilities
mockito = "1.5"
tokio-test = "0.4"
wiremock = "0.6"
rstest = "0.23"
pretty_assertions = "1"
chrono = { version = "0.4", features = ["serde"] }
